--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ padding: 10rem 9% 2rem;
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url( ./me6.jpg) no-repeat;
+    background: url( ./k1234.png) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -993,3 +993,4 @@ section{
 
     }
 }  
+
